tests/ui/nefeli/expressions/struct-expressions/struct-expression-shorthand-initializer-type-2.stderr
error[E0308]: mismatched types
  --> $DIR/struct-expression-shorthand-initializer-type-2.rs:17:9
   |
LL |         age,
   |         ^^^ expected `u16`, found `String`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
